--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -31,6 +31,7 @@
   <script src="../client/views/SongQueueView.js"></script>
   <script src="../client/views/LibraryView.js"></script>
   <script src="../client/views/LibraryEntryView.js"></script>
+  <script src="../client/views/CurrentSongView.js"></script>
   <script src="../client/views/AppView.js"></script>
 
   <script src="spec/AppSpec.js"></script>
@@ -40,6 +41,7 @@
   <script src="spec/PlayerViewSpec.js"></script>
   <script src="spec/SongQueueSpec.js"></script>
   <script src="spec/SongQueueViewSpec.js"></script>
+  <script src="spec/SongQueueEntryViewSpec.js"></script>
   <script src="spec/SongSpec.js"></script>
 
 </head>
